# lethe

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  package.nix
src/: cli.rs  db.rs  diff.rs  main.rs  nix.rs
