[package]
name = "lethe"
version = "0.1.0"
edition = "2024"
description = "Never forget your NixOS deployments"
license = "EUPL-1.2"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = [
  "clock",
  "serde",
] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.3"
directories = "6.0.0"
humansize = "2.1.3"
lix-diff = "1.5.1"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
all = "warn"
pedantic = "warn"
unreadable_literal = { level = "allow", priority = 1 }
